Fixed bug with vertical and horizontal scroll

--- a/frontend/screen/src/components/Footer/Messages/index.scss
+++ b/frontend/screen/src/components/Footer/Messages/index.scss
@@ -5,6 +5,7 @@
     height: 123px;
     margin-bottom: 0;
     padding: 13px 23px;
+    overflow: hidden;
 }
 .messages__item {
     display: flex;
