--- a/frontend/screen/src/components/Header/CurTrafficConditions/CurTrafficConditions.scss
+++ b/frontend/screen/src/components/Header/CurTrafficConditions/CurTrafficConditions.scss
@@ -1,21 +1,19 @@
 @import '../../../styles/variables';
 .traffic-condition{
-  margin: 0;
-  margin-right: 31px;
+  display: flex;
+  align-items: center;
   padding: 0;
+  margin: 0;
+  margin-right: 30px;
 }
 
 .traffic-condition__icon {
   width: 50px;
   height: 43px;
-  margin-top: 2px;
-  margin-right: 12px;
 }
 
 .traffic-condition__info{
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+
 }
 
 .traffic-condition__info-item{
