--- a/frontend/screen/src/components/Header/CurWeather/CurWeather.scss
+++ b/frontend/screen/src/components/Header/CurWeather/CurWeather.scss
@@ -2,12 +2,13 @@
 .current-weather{
   margin: 0;
   padding: 0;
+  display: flex;
+  align-items: center;
 }
 
 .current-weather__icon {
-  width: 43px;
-  height: 35px;
-  margin-top: 0;
+  width: 50px;
+  height: 50px;
   margin-right: 12px;
 }
 
