--- a/frontend/screen/src/components/Header/Header.scss
+++ b/frontend/screen/src/components/Header/Header.scss
@@ -1,13 +1,11 @@
 .container{
-  
   position: relative;
-  display: flex ;
+  display: flex;
   justify-content: space-between;
   width: 100%;
-  height: 71px;
   margin: auto;
-  margin-top: 38px;
-  margin-bottom: 10px;
+  padding: 20px;
+  box-sizing: border-box;
 }
 .right-side-info{
   display: flex;
