--- a/frontend/screen/src/components/Header/MainLogo/MainLogo.scss
+++ b/frontend/screen/src/components/Header/MainLogo/MainLogo.scss
@@ -1,8 +1,3 @@
 .main-logo{
-  position: absolute;
-  top: 12px;
-  left: 50%;
-  width: 165px;
-  height: 46.37px;
-  margin-left: -77px;
+
 }
