--- a/frontend/screen/src/components/MainVideo/MainVideo.scss
+++ b/frontend/screen/src/components/MainVideo/MainVideo.scss
@@ -1,6 +1,8 @@
 .MainVideo{
   position: relative;
   width: 100%;
+  box-sizing: border-box;
+  padding-bottom: 20px;
 }
 
 .MainVideo-gif{
