--- a/frontend/screen/src/components/QRCode/QRCode.scss
+++ b/frontend/screen/src/components/QRCode/QRCode.scss
@@ -3,8 +3,8 @@
 
 .qrCode{
   position: absolute;
-  right: -1.1vw;
-  bottom: -1.1vw;
+  right: 0;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
